--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -22,10 +24,14 @@
  <body>
   <header class="banner header banner-about">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
+    </a>
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
      <span class="navbar-toggler-icon">
      </span>
-    </button>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
@@ -38,6 +44,15 @@
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
@@ -76,12 +91,21 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -123,15 +147,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -146,25 +163,163 @@
       </li>
      </ul>
     </div>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; Services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
-       Connect with
-      </h1>
-      <h1>
-       us today!
+       Our renewable
+       <br/>
+       energy future — today
       </h1>
      </div>
     </div>
    </div>
   </header>
-  <main class="content-block">
+  <main class="content-block text-column">
+   <div class="chemistry-header">
+    <h1>
+     About Us
+    </h1>
+   </div>
    <p>
     At Energy Storage Industries — Asia Pacific (ESI), we provide reliable and environmentally friendly renewable energy storage solutions that are essential for Australia's transition to a renewable energy future.
    </p>
@@ -172,7 +327,11 @@
     ESI is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
    </p>
    <p>
-    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow large-scale energy storage [link to the our products and services page] for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
+    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow
+    <a href="/products">
+     large-scale energy storage
+    </a>
+    for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
    </p>
    <p>
     We also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
@@ -181,10 +340,18 @@
     By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
    </p>
    <p>
-    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre [when created, this will link to the NBTC page] in Brisbane.
+    <!--    [when created, this will link to the NBTC page]-->
+    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre in Brisbane.
    </p>
    <p>
-    Construction has started on our manufacturing facility at Maryborough, [when created, this will link to the Maryborough page] and we will soon expand our operations with a second facility at Townsville [when created, this will link to Townsville page]. ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
+    Construction has started on our
+    <a href="maryborough">
+     manufacturing facility at Maryborough
+    </a>
+    , and we will soon expand our operations with a second facility at either Townsville or Gladstone.
+   </p>
+   <p>
+    ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
    </p>
   </main>
   <footer>
@@ -194,25 +361,26 @@
       <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
+      <h3 class="contact-text">
+       Stay up to date and follow us
+      </h3>
+      <div class="footer-icon-container contact-text">
+       <a href="https://twitter.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+       </a>
+       <a href="https://facebook.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       </a>
+       <a href="https://www.linkedin.com/company/81527417">
+        <img class="footer-icon" src="icons/In-White-128.png"/>
+       </a>
       </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+      <br/>
+      <a class="footer-contact-us" href="/contact">
+       <h3 class="contact-text">
+        Contact Us
+       </h3>
+      </a>
      </div>
     </div>
    </section>
@@ -221,9 +389,6 @@
      <span class="mr-auto">
       © 2022 All rights reserved.
      </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
     </div>
    </section>
   </footer>
