--- a/environment.html
+++ b/environment.html
@@ -15,6 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -22,10 +24,14 @@
  <body>
   <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
+    </a>
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
      <span class="navbar-toggler-icon">
      </span>
-    </button>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
@@ -38,6 +44,15 @@
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
@@ -76,12 +91,21 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -123,15 +147,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -146,58 +163,191 @@
       </li>
      </ul>
     </div>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; Services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
-       Connect with
-      </h1>
-      <h1>
-       us today!
-      </h1>
-      <h1>
-       — today
+       Our renewable
+       <br/>
+       energy future — today
       </h1>
      </div>
     </div>
    </div>
   </header>
   <main class="content-block">
-   <div class="environment-header">
+   <div class="text-column chemistry-header">
     <h1>
      Environment, Social and Governance
     </h1>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Solar Power" class="img-responsive" src="images/About-Solar.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Solar Power" class="img-responsive" src="images/About-Solar.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img alt="Solar Power" class="our-team-text-img" src="images/About-Solar.svg"/>
      <p>
       ESI products are completely sustainable and 100 per cent recyclable. The iron flow batteries have a 10 to 14-hour storage capacity and 25 year lifecycle. The environmentally friendly electrolyte also means that the product is ideally suited to remote locations such as the National Parks and the Great Barrier Reef.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Handshake" class="img-responsive" src="images/About-Handshake.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Handshake" class="img-responsive" src="images/About-Handshake.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img alt="Handshake" class="our-team-text-img" src="images/About-Handshake.svg"/>
      <p>
-      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our  facilities throughout regional Queensland.
+      ESI provides a significant social and economic boost to the Australian community. Initially, we are investing up to $70 million to build a manufacturing hub in Maryborough. An economic impact assessment conducted by leading professional services firm EY shows that ESI’s operations will boost Gross State Product (GSP) by $676 million over the first 20 years of operation, with the majority of that benefit occurring in the first five years. When fully operational in 2026, ESI we will have up to 500 highly skilled employees and contractors working at our facilities throughout regional Queensland.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="About Team" class="img-responsive" src="images/About-Team.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="About Team" class="img-responsive" src="images/About-Team.svg"/>
     </div>
-    <div class="col-md-8 environment-text">
+    <div class="text-column our-team-text-column">
+     <img alt="About Team" class="our-team-text-img" src="images/About-Team.svg"/>
      <p>
       ESI is run by a board and executive team that has decades of experience in the energy, manufacturing, technology and finance sectors. Importantly, they have a deep, end-to-end understanding of the energy value chain from technical operation of assets to energy trading.
      </p>
@@ -211,25 +361,26 @@
       <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
+      <h3 class="contact-text">
+       Stay up to date and follow us
+      </h3>
+      <div class="footer-icon-container contact-text">
+       <a href="https://twitter.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+       </a>
+       <a href="https://facebook.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       </a>
+       <a href="https://www.linkedin.com/company/81527417">
+        <img class="footer-icon" src="icons/In-White-128.png"/>
+       </a>
       </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+      <br/>
+      <a class="footer-contact-us" href="/contact">
+       <h3 class="contact-text">
+        Contact Us
+       </h3>
+      </a>
      </div>
     </div>
    </section>
@@ -238,9 +389,6 @@
      <span class="mr-auto">
       © 2022 All rights reserved.
      </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
     </div>
    </section>
   </footer>
