--- a/index.html
+++ b/index.html
@@ -17,15 +17,22 @@
   </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <script defer="" src="js/sidebar.js">
+  </script>
+  <!--   <script src="js/rss-feed.js"> </script>-->
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
   <header class="banner banner-homepage header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
+    </a>
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
      <span class="navbar-toggler-icon">
      </span>
-    </button>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
@@ -38,6 +45,15 @@
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
@@ -76,12 +92,21 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -123,15 +148,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -146,28 +164,161 @@
       </li>
      </ul>
     </div>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; Services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
+   <!--END NAVBAR-->
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
        Our renewable
        <br/>
-       energy future
-      </h1>
-      <h1>
-       — today
+       energy future — today
       </h1>
      </div>
     </div>
    </div>
   </header>
   <main class="content-block">
-   <div class="row chemistry-header" style="text-align: center">
+   <div class="row" style="text-align: left">
+    <!--    <div></div>-->
     <p>
      We provide reliable and environmentally friendly
      <strong>
@@ -197,6 +348,12 @@
     <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="440" src="https://www.youtube.com/embed/1BH4u7y8HsU" style="margin:auto; margin-top: 30px" title="YouTube video player" width="780">
     </iframe>
    </div>
+   <div class="news-feed">
+    <div id="flockler-embed-1827343613409ce62cd5d4e9fc68cb00">
+    </div>
+    <script async="" src="https://plugins.flockler.com/embed/182733e15910a126432935ff4ee5c9f4/1827343613409ce62cd5d4e9fc68cb00">
+    </script>
+   </div>
    <!--    <video class="media-video" style='border: 2px solid #f7931c;' controls poster="images/ESI%20corporate%20video%20tile.jpg">-->
    <!--     <source src="https://www.youtube.com/embed/DwZ2jdRH5GI">-->
    <!--     frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen allow="autoplay"-->
@@ -211,25 +368,26 @@
     <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
    </a>
    <div class="footer-contacts">
-    <h4 class="contact-text">
-     CONTACT
-    </h4>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      room
-     </i>
-     <p class="ml-2">
-      Brisbane, Australia
-     </p>
+    <h3 class="contact-text">
+     Stay up to date and follow us
+    </h3>
+    <div class="footer-icon-container contact-text">
+     <a href="https://twitter.com/ESIAsiaPacific">
+      <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+     </a>
+     <a href="https://facebook.com/ESIAsiaPacific">
+      <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+     </a>
+     <a href="https://www.linkedin.com/company/81527417">
+      <img class="footer-icon" src="icons/In-White-128.png"/>
+     </a>
     </div>
-    <div class="icon-row">
-     <i class="material-icons footer-contact-icon">
-      mail
-     </i>
-     <p class="ml-2">
-      info@esiap.com.au
-     </p>
-    </div>
+    <br/>
+    <a class="footer-contact-us" href="/contact">
+     <h3 class="contact-text">
+      Contact Us
+     </h3>
+    </a>
    </div>
   </div>
  </section>
@@ -238,9 +396,6 @@
    <span class="mr-auto">
     © 2022 All rights reserved.
    </span>
-   <a class="footer-icon-container" href="https://twitter.com/ess_info">
-    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-   </a>
   </div>
  </section>
 </footer>
