--- a/maryborough.html
+++ b/maryborough.html
@@ -15,6 +15,10 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
+  <script defer="" src="js/sidebar.js">
+  </script>
+  <script defer="" src="js/slides.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -22,10 +26,14 @@
  <body>
   <header class="banner banner-operations header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
+    </a>
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
      <span class="navbar-toggler-icon">
      </span>
-    </button>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
@@ -38,6 +46,15 @@
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
@@ -76,12 +93,21 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -123,15 +149,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -146,31 +165,200 @@
       </li>
      </ul>
     </div>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; Services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
        Our renewable
        <br/>
-       energy future
-      </h1>
-      <h1>
-       — today
+       energy future — today
       </h1>
      </div>
     </div>
    </div>
   </header>
   <main class="content-block">
-   <div class="chemistry-header">
-    <h1>
-     Coming Soon
-    </h1>
+   <div class="news-article">
+    <!--    <div class="text-column chemistry-header">-->
+    <!--    </div>-->
+    <div class="text-column">
+     <div class="chemistry-header">
+      <h1>
+       Maryborough
+      </h1>
+     </div>
+     <img alt="Sod Turning" src="images/Sod%20Turning%201.jpg" style="width: 100%; margin-left: auto; margin-right: auto"/>
+     <p>
+      Work on our $70 million Maryborough facility officially started on Wednesday, 6 July 2022.
+     </p>
+     <p>
+      Deputy Premier the Hon Dr Steven Miles MP, State Member for Maryborough Bruce Saunders MP, Fraser Coast Regional Council Mayor Cr George Seymour and Butchulla elder Eleanor Currie were on hand to officiate at a sod turning ceremony to mark the start of construction.
+     </p>
+     <p>
+      Once complete in 2024, the Maryborough facility will manufacture and distribute iron flow batteries that allow large-scale energy storage for wholesale electricity generators, energy retailers, and commercial and industrial customers.
+     </p>
+     <div class="slide-container" style="margin-left: auto; margin-right: auto">
+      <span class="prev banner-button event-button" onclick="plusSlide(-1)">
+       ❮
+      </span>
+      <img alt="Maryborough Facility 1" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%201.jpg"/>
+      <img alt="Maryborough Facility 2" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%202.jpg"/>
+      <img alt="Maryborough Facility 3" class="event-slide" src="/images/ESI%20-%20Maryborough%20facility%203.jpg"/>
+      <span class="next banner-button event-button" onclick="plusSlide(1)">
+       ❯
+      </span>
+     </div>
+     <div class="event-dox-box" style="text-align:center; margin-bottom: 30px">
+      <span style="padding: 2px; border-radius: 5px;">
+       <span class="event-dot" onclick="currentSlide(1)">
+       </span>
+       <span class="event-dot" onclick="currentSlide(2)">
+       </span>
+       <span class="event-dot" onclick="currentSlide(3)">
+       </span>
+      </span>
+     </div>
+     <!--    <img alt="Features and advantages" class="img-fluid" src="images/Energy-Transition.png"/>-->
+    </div>
    </div>
   </main>
   <footer>
@@ -180,25 +368,26 @@
       <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
+      <h3 class="contact-text">
+       Stay up to date and follow us
+      </h3>
+      <div class="footer-icon-container contact-text">
+       <a href="https://twitter.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+       </a>
+       <a href="https://facebook.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       </a>
+       <a href="https://www.linkedin.com/company/81527417">
+        <img class="footer-icon" src="icons/In-White-128.png"/>
+       </a>
       </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+      <br/>
+      <a class="footer-contact-us" href="/contact">
+       <h3 class="contact-text">
+        Contact Us
+       </h3>
+      </a>
      </div>
     </div>
    </section>
@@ -207,9 +396,6 @@
      <span class="mr-auto">
       © 2022 All rights reserved.
      </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
     </div>
    </section>
   </footer>
