--- a/solutions.html
+++ b/solutions.html
@@ -15,6 +15,8 @@
   <link href="css/main.css" rel="stylesheet"/>
   <script crossorigin="anonymous" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js">
   </script>
+  <script defer="" src="js/sidebar.js">
+  </script>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
   <link href="/favicon.png" rel="icon"/>
@@ -22,10 +24,14 @@
  <body>
   <header class="banner banner-product header">
    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-    <button aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbarSupportedContent" data-bs-toggle="collapse" type="button">
+    <a class="navbar-brand" href="/" style="align-self: flex-start">
+     <img alt="Energy Storage Industries - Asia Pacific" class="navbar-logo" src="images/Home-Logo.png"/>
+    </a>
+    <a aria-expanded="false" aria-label="Toggle navigation" class="sidebar-menu" href="#" onclick="openSidebar()">
      <span class="navbar-toggler-icon">
      </span>
-    </button>
+    </a>
+    <!--DESKTOP SIDEBAR-->
     <div class="navbar-bottom collapse navbar-collapse" id="navbarSupportedContent">
      <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
       <li class="nav-item">
@@ -38,6 +44,15 @@
         About Us
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
         <li>
          <a class="dropdown-item btn btn-sub" href="/board">
           Board
@@ -76,12 +91,21 @@
       </li>
       <li class="nav-item dropdown">
        <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
-        Products &amp; services
+        Products &amp; Services
        </a>
        <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
         <li>
-         <a class="dropdown-item btn btn-sub" href="/introduction">
-          Introduction
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
          </a>
         </li>
         <li>
@@ -123,15 +147,8 @@
           Maryborough
          </a>
         </li>
-        <li>
-         <div class="dropdown-divider">
-         </div>
-        </li>
-        <li>
-         <a class="dropdown-item btn btn-sub" href="/townsville">
-          Townsville
-         </a>
-        </li>
+        <!--        <li><div class="dropdown-divider"></div></li>-->
+        <!--        <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
        </ul>
       </li>
       <li class="nav-item">
@@ -146,21 +163,152 @@
       </li>
      </ul>
     </div>
+    <!--    MOBILE SIDEBAR HERE-->
+    <div class="sidebar" id="mobileSidebar">
+     <ul class="navbar-nav me-auto mb-2 mb-lg-0 bg-transparent">
+      <li class="nav-item">
+       <a class="nav-link btn" href="/">
+        Home
+       </a>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="about-us nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        About Us
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/about">
+          About Us
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/board">
+          Board
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/senior">
+          Senior Mangement
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/environment">
+          Environment, Social
+          <br/>
+          and Governance
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/careers">
+          Careers
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Products &amp; Services
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/products">
+          Products &amp; Services
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/our-batteries">
+          Our Batteries
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/transition">
+          Energy Transition
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/chemistry">
+          Chemistry
+         </a>
+        </li>
+        <li>
+         <div class="dropdown-divider">
+         </div>
+        </li>
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/solutions">
+          Solutions
+         </a>
+        </li>
+       </ul>
+      </li>
+      <li class="nav-item dropdown">
+       <a aria-expanded="false" class="nav-link dropdown-toggle btn" data-bs-toggle="dropdown" href="#" id="navbarDropdown" role="button">
+        Operations
+       </a>
+       <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+        <li>
+         <a class="dropdown-item btn btn-sub" href="/maryborough">
+          Maryborough
+         </a>
+        </li>
+        <!--         <li><div class="dropdown-divider"></div></li>-->
+        <!--         <li><a class="dropdown-item btn btn-sub" href="/townsville">Townsville</a></li>-->
+       </ul>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="https://press.esiap.com.au">
+        News and media
+       </a>
+      </li>
+      <li class="nav-item">
+       <a class="nav-link btn" href="/contact">
+        Contact
+       </a>
+      </li>
+     </ul>
+    </div>
+    <div class="page-blocker" id="blocker" onclick="closeSidebar()">
+    </div>
     <img alt="ESI Logo" class="img-fluid navbar-icon collapse navbar-collapse" src="images/header-logo.png"/>
    </nav>
    <div class="banner-text">
     <div class="row">
-     <div class="col">
-      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png"/>
+     <div class="col banner-logo">
+      <img alt="ESI Asia Pacific Pty Ltd" class="img-fluid" src="images/Home-Logo.png" style="padding-right: 30px; margin-left: auto"/>
      </div>
-     <div class="col">
+     <div class="col banner-tagline">
       <h1>
        Our renewable
        <br/>
-       energy future
-      </h1>
-      <h1>
-       — today
+       energy future — today
       </h1>
      </div>
     </div>
@@ -175,64 +323,68 @@
      The modular design of our products allows for ESI to deliver across multiple industry uses:
     </p>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env ">
      <img alt="Utility" class="img-responsive" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
      <h3>
       Utility
      </h3>
+     <img alt="Utility" class="our-team-text-img" src="images/P_S-Solutions-Utility-Icon.svg" style="max-width: 137px;"/>
      <p>
       Large scale installations of medium duration (10 hour) storage from 20MW to 1GW integrating into existing
                 Transmission connections enabling an orderly transition from fossil fuel generation to Renewable sources
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
      <img alt="Transmission" class="img-responsive" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Transmission" class="our-team-text-img" src="images/P_S-Solutions-Transmission-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Transmission/Distribution
      </h3>
-     <p>
-      the advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
-                points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
-                distributed and transmission renewable penetration.
+    <p>
+      The advent of intermittent generation places great strains on the grid, by locating ESI storage in constraint
+      points, utilising grid forming inverters, grid operators are able to stabilize the grid whilst enabling deeper
+      distributed and transmission renewable penetration.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
      <img alt="Commercial" class="img-responsive" src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Commercial" class="our-team-text-img" src="images/P_S-Solutions-Commercial-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Commercial and industrial
      </h3>
      <p>
       Localised generation will be a key part of a clean energy grid. Large scale commercial and industrial users are
-                able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
-                product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
-                Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
+      able to take control of their energy costs via small scale generation and accompanying storage. ESI’s modular
+      product allows for all Commercial and Industrial (from small to large) users to limit their draw from the grid.
+      Environmentally friendly and with no flammable risk, the storage is able to be installed in most locations.
      </p>
     </div>
    </div>
-   <div class="row">
-    <div class="col-md-4">
-     <img alt="Rural" class="img-responsive" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
+   <div class="our-team-content">
+    <div class="our-team-image-column our-team-image-column-env">
+     <img alt="Commercial" class="img-responsive" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
     </div>
-    <div class="col-md-8 chemistry-header">
+    <div class="text-column our-team-text-column chemistry-header">
+     <img alt="Commercial" class="our-team-text-img" src="images/P_S-Solutions-Rural-Icon.svg" style="max-width: 137px;"/>
      <h3>
       Rural, Remote and Island
      </h3>
      <p>
-      De-carbonisation of the rural, remote and Island networks are an integral part of a zero carbon emission grid.
-                Scalable stand alone power systems that can integrate renewable generation, storage, load management
-                systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
-                adapted to meet the largest to the smallest of load requirements.
+      De-carbonisation of the rural, remote and island networks are an integral part of a zero carbon emission grid.
+      Scalable stand-alone power systems that can integrate renewable generation, storage, load management
+      systems and back up generation capacity (diesel generation, compressed air, Hydrogen fuel cells) can be
+      adapted to meet the largest to the smallest of load requirements.
      </p>
     </div>
    </div>
@@ -244,25 +396,26 @@
       <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
      </a>
      <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
+      <h3 class="contact-text">
+       Stay up to date and follow us
+      </h3>
+      <div class="footer-icon-container contact-text">
+       <a href="https://twitter.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/2021%20Twitter%20logo%20-%20white.png"/>
+       </a>
+       <a href="https://facebook.com/ESIAsiaPacific">
+        <img class="footer-icon" src="icons/f_logo_RGB-White_512.png"/>
+       </a>
+       <a href="https://www.linkedin.com/company/81527417">
+        <img class="footer-icon" src="icons/In-White-128.png"/>
+       </a>
       </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
+      <br/>
+      <a class="footer-contact-us" href="/contact">
+       <h3 class="contact-text">
+        Contact Us
+       </h3>
+      </a>
      </div>
     </div>
    </section>
@@ -271,9 +424,6 @@
      <span class="mr-auto">
       © 2022 All rights reserved.
      </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
     </div>
    </section>
   </footer>
